--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "flipboxfactory/craft-element-lists",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Simple Element lists",
   "type": "craft-plugin",
   "keywords": [
@@ -11,10 +11,10 @@
     "yii2"
   ],
   "require": {
-    "craftcms/cms": "~3.0.0",
-    "flipboxfactory/craft-ember": "~1.0.0",
-    "flipboxfactory/craft-elements-nested-index": "~1.0.0",
-    "flipboxfactory/craft-sortable-associations": "~1.0.0"
+    "craftcms/cms": "^3.0",
+    "flipboxfactory/craft-ember": "^1.0",
+    "flipboxfactory/craft-elements-nested-index": "^1.0",
+    "flipboxfactory/craft-sortable-associations": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0",
