--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   ],
   "require": {
     "craftcms/cms": "^3.0",
-    "flipboxfactory/craft-ember": "^2.0"
+    "flipboxfactory/craft-ember": "^2.0",
+    "flipboxfactory/craft-elements-nested-index": "^2.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0",
