--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "craft cms",
     "yii2"
   ],
-  "license": "MIT",
+  "license": "proprietary",
   "authors": [
     {
       "name": "Flipbox Digital",
