--- a/composer.json
+++ b/composer.json
@@ -50,8 +50,8 @@
     "class": "flipbox\\craft\\element\\lists\\ElementList",
     "developer": "Flipbox Digital",
     "developerUrl": "https://www.flipboxdigital.com",
-    "changelogUrl": "https://raw.githubusercontent.com/flipboxfactory/craft-salesforce/master/CHANGELOG.md",
-    "documentationUrl": "https://salesforce.flipboxfactory.com",
+    "changelogUrl": "https://raw.githubusercontent.com/flipboxfactory/craft-element-lists/master/CHANGELOG.md",
+    "documentationUrl": "https://github.com/flipboxfactory/craft-element-lists/blob/master/README.md",
     "hasCpSettings": false,
     "hasCpSection": false,
     "schemaVersion": "1.1.0",
