--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "flipboxfactory/craft-element-lists",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "Simple Element lists",
   "type": "craft-plugin",
   "keywords": [
@@ -18,7 +18,7 @@
     }
   ],
   "require": {
-    "craftcms/cms": ">=3.2.0 <3.4",
+    "craftcms/cms": ">=3.4.0",
     "flipboxfactory/craft-ember": "^2.4.0",
     "flipboxfactory/craft-elements-nested-index": "^2.3.0",
     "tightenco/collect": "^5.5"
@@ -57,7 +57,7 @@
     "hasCpSection": false,
     "schemaVersion": "1.1.0",
     "branch-alias": {
-      "dev-master": "3.0.x-dev",
+      "dev-master": "3.1.x-dev",
       "dev-develop": "3.1.x-dev"
     }
   }
